--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,17 @@
 /* W3.CSS 4.15 December 2020 by Jan Egil and Borge Refsnes */
 /* Colors */
-.custom-background,.custom-background:hover{color:#000!important;background-color:#1a1a1a!important}
+.custom-background,.custom-background:hover{color:#000!important;background-color:#1A1A1A!important}
 .custom-card-background,.custom-card-background:hover{color:#000!important;background-color:#262626!important}
-.custom-text-body,.custom-text-body:hover{color:#d9d9d9!important}
+.custom-accent-color,.custom-accent-color:hover{color: #000,!important;background-color: #60C689;}
+.custom-text-accent,.custom-text-accent:hover{color:#60C689!important}
+.custom-text-body,.custom-text-body:hover{color:#fef7e4!important}
+.custom-accent-darkened, .custom-accent-darkened:hover{color:#000!important;background-color:#3D7052!important}
+.custom-text-darkened, .custom-text-darkened:hover{color: #262626}
+
+.custom-nav, .custom-nav:hover{
+  color: #262626!important;
+  background-color: #3D7052!important;
+}
 
 .right-image {
   position: absolute;
@@ -104,12 +113,12 @@ hr.thinline {
 
 .about-dynamic-card-front {
   background-color: #262626;
-  color: #d9d9d9;
+  color: #fef7e4;
 }
 
 .about-dynamic-card-back {
   background-color: #262626;
-  color: #d9d9d9;
+  color: #fef7e4;
   transform: rotateY(180deg);
 }
 
@@ -152,12 +161,12 @@ hr.thinline {
 
 .custom-dynamic-card-front {
   background-color: #262626;
-  color: #e91e63;
+  color: #60C689;
 }
 
 .custom-dynamic-card-back {
-  background-color: #e91e63;
-  color: #d9d9d9;
+  background-color: #60C689;
+  color: #fef7e4;
   transform: rotateY(180deg);
 }
 
